[package]
name = "component-crypto"
description = "Cryptographic hashing, HMAC, and JWT decoding"
version = "0.2.1"
edition = "2024"

[dependencies]
act-sdk = "0.5"
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
sha2 = "0.11"
sha3 = "0.11"
hmac = "0.13"
hex = "0.4"
serde_json = "1"
base64 = "0.22"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
